crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_replaces_builtin.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\renewcommand{\\epsilon}{\\varepsilon}\\epsilon"
---
<math>
    <mi>ε</mi>
</math>
