crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_replaces_builtin_unreliable.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\renewcommand{\\widecheck}{x}\\widecheck"
---
<math>
    <mi>x</mi>
</math>
