crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_replaces_builtin_with_args.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\renewcommand{\\frac}[2]{#1/#2}\\frac{1}{2}"
---
<math>
    <mn>1</mn>
    <mo lspace="0" rspace="0">/</mo>
    <mn>2</mn>
</math>
