crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_replaces_config_macro.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\renewcommand{\\half}{\\frac{1}{3}}\\half"
---
<math>
    <mfrac>
        <mn>1</mn>
        <mn>3</mn>
    </mfrac>
</math>
