crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_replaces_newcommand.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\newcommand{\\zz}{\\mathbb{Z}}\\renewcommand{\\zz}{\\mathbb{Q}}\\zz"
---
<math>
    <mi>ℚ</mi>
</math>
