crates/math-core/tests/snapshots/custom_cmd_test__renewcommand_then_providecommand.snap
---
source: crates/math-core/tests/custom_cmd_test.rs
expression: "\\renewcommand{\\epsilon}{a}\\providecommand{\\epsilon}{b}\\epsilon"
---
<math>
    <mi>a</mi>
</math>
